--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
         <nav>
             <a href="#" class="logo">
                 <i class="fas fa-cat"></i>
-                Siguranța Pisicii
+                Siguranța Pisicii mew mew
             </a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home">Acasă</a></li>
