--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             font-size: 1.8rem;
             font-weight: bold;
             text-decoration: none;
-            color: #2c3e50;
+            color: #ff5722;
         }
 
         .logo i {
@@ -119,7 +119,7 @@
 
         .floating-cat {
             position: absolute;
-            font-size: 2rem;
+            font-size: 4rem;
             opacity: 0.2;
             animation: float 20s infinite linear;
             color: #4a90e2;
@@ -128,31 +128,31 @@
         .floating-cat:nth-child(1) {
             left: 10%;
             animation-delay: 0s;
-            font-size: 1.5rem;
+            font-size: 4.5rem;
         }
 
         .floating-cat:nth-child(2) {
             left: 20%;
             animation-delay: -4s;
-            font-size: 2.5rem;
+            font-size: 3.5rem;
         }
 
         .floating-cat:nth-child(3) {
             left: 40%;
             animation-delay: -8s;
-            font-size: 1.8rem;
+            font-size: 2.8rem;
         }
 
         .floating-cat:nth-child(4) {
             left: 60%;
             animation-delay: -12s;
-            font-size: 2.2rem;
+            font-size: 3.2rem;
         }
 
         .floating-cat:nth-child(5) {
             left: 80%;
             animation-delay: -16s;
-            font-size: 1.6rem;
+            font-size: 2.6rem;
         }
 
         @keyframes float {
@@ -731,7 +731,7 @@
             <div class="footer-column">
                 <h4>Date companie</h4>
                 <p><strong>CUI:</strong> 52362119</p>
-                <p><strong>Adresa:</strong><br>Calea Vacaresti 234, bl 83, apt35, 4<br>Bucuresti</p>
+                <p><strong>Adresa:</strong><br>Calea Vacaresti 234, bl 83, apt 35, 4<br>Bucuresti</p>
             </div>
             
             <div class="footer-column">
@@ -751,7 +751,6 @@
         
         <div class="footer-bottom">
             <p>&copy; 2024 Siguranta Pisicii. Toate drepturile rezervate.</p>
-            <p>Protejam pisicile cu dragoste si profesionalism</p>
         </div>
     </footer>
 
