--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             padding: 2rem;
             backdrop-filter: blur(10px);
         }
-/*de vazut daca trebuie scos sau lasat*/
+
         
 .grid-container {
     display: grid;
@@ -750,7 +750,7 @@
             <div class="footer-column">
                 <h4>Date companie</h4>
                 <p><strong>CUI:</strong> 52362119</p>
-                <p><strong>Adresa:</strong><br>Calea Vacaresti 234, bl 83, apt 35, 4<br>Bucuresti</p>
+                <p><strong>Adresa:</strong>Calea Vacaresti 234, bl 83, apt 35, 4<br>Bucuresti</p>
             </div>
               </div>
               <div class="grid-container">
@@ -764,8 +764,8 @@
   <div class="grid-container">
             <div class="footer-column">
                 <h4>Suport clienti</h4>
-                <a href="#">Termeni si conditii</a>
-                <a href="#">ANPC & SOL</a>
+                <a href>Termeni si conditii</a><br>
+                <a href>ANPC & SOL</a><br>
                 <a href="#">Politica returnare</a>
             </div>
         </div>
