--- a/index.html
+++ b/index.html
@@ -667,6 +667,7 @@
                 
                 <div class="about-images animate-on-scroll">
                     <div class="about-image">
+                        <img src="Bella1.jpg" alt="Responsive image" style="max-width: 100%; height: auto;">
                         <img src="C:\Users\A55144406\OneDrive - Deutsche Telekom AG\Desktop\CaTs\Poze\Bella1.jpeg" alt="Responsive image" style="max-width: 100%; height: auto;">
                         <div class="about-image-caption">Plasa montata la fereastra</div>
                     </div>
@@ -750,7 +751,7 @@
             <div class="footer-column">
                 <h4>Date companie</h4>
                 <p><strong>CUI:</strong> 52362119</p>
-                <p><strong>Adresa:</strong>Calea Vacaresti 234, bl 83, apt 35, 4<br>Bucuresti</p>
+                <p><strong>Adresa:</strong> Calea Vacaresti 234, bl 83, apt 35, 4<br>Bucuresti</p>
             </div>
               </div>
               <div class="grid-container">
@@ -765,7 +766,7 @@
             <div class="footer-column">
                 <h4>Suport clienti</h4>
                 <a href>Termeni si conditii</a><br>
-                <a href>ANPC & SOL</a><br>
+                <a href="#" style="color: white;">ANPC & SOL</a><br>
                 <a href="#">Politica returnare</a>
             </div>
         </div>
