--- a/index.html
+++ b/index.html
@@ -767,9 +767,10 @@
   <div class="grid-container">
             <div class="footer-column">
                 <h4>Suport clienti</h4>
-                <a href="#" style="color: white;">Termeni si conditii</a><br>
-                <a href="#" style="color: white;">ANPC & SOL</a><br>
-                <a href="#" style="color: white;">Politica returnare</a>
+                <a href="/docs/document.docx" target="_blank" style="color: white;">Termeni si conditii</a><br>
+                <a href="https://anpc.ro/" style="color: white;">ANPC</a><br>
+                <a href="https://consumer-redress.ec.europa.eu/site-relocation_en?event=main.help.new&lng=RO" style="color: white;">SOL</a><br>
+                <a href="/docs/document.docx" target="_blank" style="color: white;">Politica returnare</a>
             </div>
         </div>
             
