--- a/index.html
+++ b/index.html
@@ -667,8 +667,7 @@
                 
                 <div class="about-images animate-on-scroll">
                     <div class="about-image">
-                        <img src="Bella1.jpg" alt="Responsive image" style="max-width: 100%; height: auto;">
-                        <img src="C:\Users\A55144406\OneDrive - Deutsche Telekom AG\Desktop\CaTs\Poze\Bella1.jpeg" alt="Responsive image" style="max-width: 100%; height: auto;">
+                        <img src="Photos/Bella1.jpg" alt="Responsive image" style="max-width: 100%; height: auto;">
                         <div class="about-image-caption">Plasa montata la fereastra</div>
                     </div>
 
