--- a/index.html
+++ b/index.html
@@ -672,17 +672,17 @@
                     </div>
 
                 <div class="about-image">
-                        <img src="photos/Murphy1.jpeg" alt="Plasa rezistenta">
+                        <img src="photos/Murphy1.jpeg" alt="Responsive image" style="max-width: 100%; height: auto;">
                         <div class="about-image-caption">Plasa rezistenta</div>
                     </div>
                     
                     <div class="about-image">
-                        <img src="photos/Murphy2.jpeg" alt="Pisica fericita si protejata">
+                        <img src="photos/Murphy2.jpeg" alt="Responsive image" style="max-width: 100%; height: auto;">
                         <div class="about-image-caption">Pisica fericita si protejata</div>
                     </div>
                     
                     <div class="about-image">
-                           <img src="photos/P1.jpeg" alt="Montaj rofesional">
+                           <img src="photos/P1.jpeg" alt="Responsive image" style="max-width: 100%; height: auto;">
                            <div class="about-image-caption">Montaj profesional</div>
                     </div>
 
