--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             <h2 class="animate-on-scroll">Contacteaza-ne</h2>
             
             <div class="contact-content">
-                    <form class="contact-form animate-on-scroll" id="contact-form" action=https://formspree.io/f/xkgvejdr method="POST">
+                    <form class="contact-form animate-on-scroll" id="contact-form" action="https://formspree.io/f/xkgvejdr" method="POST">
                     
                     <div class="form-group">
                         <label for="name">Numele tau</label>
