photo order changed

--- a/index.html
+++ b/index.html
@@ -936,31 +936,26 @@
                 <p>Toate plasele noastre sunt testate riguros si vin cu garantie de <strong>2 ani</strong> pentru linistea ta completa.</p>
             </div>
             <div class="about-images">
-                <div class="about-image" data-image="photos/Bella1.jpeg" data-caption="Plasa montata la fereastra">
-                    <img src="photos/Bella1.jpeg" alt="Plasa montata la fereastra" loading="lazy" style="max-width: 100%; height: auto;">
+                <div class="about-image" data-image="photos/Pisi3.jpeg" data-caption="Plasa montata la fereastra">
+                    <img src="photos/Pisi3.jpeg" alt="Plasa montata la fereastra" loading="lazy" style="max-width: 100%; height: auto;">
                     <div class="about-image-caption">Plasa montata la fereastra</div>
                 </div>
-                <div class="about-image" data-image="photos/Murphy1.jpeg" data-caption="Plasa rezistenta">
-                    <img src="photos/Murphy1.jpeg" alt="Plasa rezistenta" loading="lazy" style="max-width: 100%; height: auto;">
+                <div class="about-image" data-image="photos/Pisi4.jpeg" data-caption="Plasa rezistenta">
+                    <img src="photos/Pisi4.jpeg" alt="Plasa rezistenta" loading="lazy" style="max-width: 100%; height: auto;">
                     <div class="about-image-caption">Plasa rezistenta</div>
                 </div>
-                <div class="about-image" data-image="photos/Murphy2.jpeg" data-caption="Pisica fericita si protejata">
-                    <img src="photos/Murphy2.jpeg" alt="Pisica fericita si protejata" loading="lazy" style="max-width: 100%; height: auto;">
+                <div class="about-image" data-image="photos/Murphy1.jpeg" data-caption="Pisica fericita si protejata">
+                    <img src="photos/Murphy1.jpeg" alt="Pisica fericita si protejata" loading="lazy" style="max-width: 100%; height: auto;">
                     <div class="about-image-caption">Pisica fericita si protejata</div>
                 </div>
                 <div class="about-image" data-image="photos/P1.jpeg" data-caption="Montaj profesional">
                     <img src="photos/P1.jpeg" alt="Montaj profesional" loading="lazy" style="max-width: 100%; height: auto;">
                     <div class="about-image-caption">Montaj profesional</div>
                 </div>
-                <div class="about-image hide" data-image="photos/Pisi3.jpeg" data-caption="Montaj profesional">
-                    <img src="photos/Pisi3.jpeg" alt="Montaj profesional" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Montaj profesional</div>
+                <div class="about-image hide" data-image="photos/Murphy2.jpeg" data-caption="In siguranta">
                 </div>
-                <div class="about-image hide" data-image="photos/Pisi4.jpeg" data-caption="Montaj profesional">
-                    <img src="photos/Pisi4.jpeg" alt="Montaj profesional" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Montaj profesional</div>
+                <div class="about-image hide" data-image="photos/Bella1.jpeg" data-caption="Pufos si protejat">
                 </div>
-
             </div>
         </div>
     </div>
