politica de returnare si termeni si conditii

--- a/index.html
+++ b/index.html
@@ -1034,10 +1034,10 @@
         </div>
         <div class="footer-column">
             <h4>Suport clienti</h4>
-            <a href="/docs/document.docx" target="_blank">Termeni si conditii</a>
+            <a href="doc/termeni_conditii_siguranta_pisicii.pdf" target="_blank">Termeni si conditii</a>
             <a href="https://anpc.ro/">ANPC</a>
             <a href="https://consumer-redress.ec.europa.eu/site-relocation_en?event=main.help.new&lng=RO">SOL</a>
-            <a href="/docs/document.docx" target="_blank">Politica returnare</a>
+            <a href="doc/politica_returnare_siguranta_pisicii.pdf" target="_blank">Politica returnare</a>
         </div>
     </div>
     <p>&copy; 2024 Siguranta Pisicii. Toate drepturile rezervate.</p>
