added favico and og-image

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:type" content="website">
     <title>Siguranta Pisicii - Plase de Protectie pentru Ferestre</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         * {
             margin: 0;
@@ -908,7 +909,7 @@
             </div>
             <div class="product-card">
                 <div class="product-icon">
-                    <i class="fas fa-ruler-combined"></i>
+                    <i class="fas fa-table"></i>
                 </div>
                 <h3>Plasa Fereastra/Usa Balcon Non-Standard</h3>
                 <ul>
