--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Siguranta Pisicii">
     <meta property="og:title" content="Siguranta Pisicii - Plase de Protectie pentru Ferestre si Usi">
     <meta property="og:description" content="Protectie pentru pisici si anti-insecte cu plase personalizate. Contacteaza-ne pentru o oferta in Bucuresti si Ilfov!">
-    <meta property="og:image" content="/photos/og-image.jpg">
+    <meta property="og:image" content="og-image.jpg">
     <meta property="og:url" content="https://www.sigurantapisicii.ro">
     <meta property="og:type" content="website">
     <title>Siguranta Pisicii - Plase de Protectie pentru Ferestre</title>
