--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                 <div class="product-icon">
                     <i class="fas fa-window-maximize"></i>
                 </div>
-                <h3>Plasa Fereastra Standard (fixa/mobila)</h3>
+                <h3>Plasa Fereastra Standard (fixa/mobila <br> masuri: 55cm-65cm / 100cm-110cm)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
@@ -899,7 +899,7 @@
                 <div class="product-icon">
                     <i class="fas fa-door-open"></i>
                 </div>
-                <h3>Plasa Usa Balcon Standard (fixa/mobila)</h3>
+                <h3>Plasa Usa Balcon Standard (fixa/mobila <br> masuri: 50cm-60cm / 170cm-180cm)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
