--- a/index.html
+++ b/index.html
@@ -899,11 +899,12 @@
                 <div class="product-icon">
                     <i class="fas fa-door-open"></i>
                 </div>
-                <h3>Plasa Usa Balcon Standard (fixa/mobila <br> masuri: 50cm-60cm / 170cm-180cm)</h3>
+                <h3>Plasa Usa Balcon Standard (fixa/mobila)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
                     <li>Montaj profesional la domiciliu</li>
+                    <li>Masuri standard: 50cm-60cm / 170cm-180cm </li>
                 </ul>
                 <div class="price">750 LEI</div>
             </div>
