--- a/index.html
+++ b/index.html
@@ -887,11 +887,12 @@
                 <div class="product-icon">
                     <i class="fas fa-window-maximize"></i>
                 </div>
-                <h3>Plasa Fereastra Standard (fixa/mobila <br> masuri: 55cm-65cm / 100cm-110cm)</h3>
+                <h3>Plasa Fereastra Standard (fixa/mobila)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
                     <li>Montaj profesional la domiciliu</li>
+                    <li>Masuri standard: 55cm-65cm / 100cm-110cm </li>
                 </ul>
                 <div class="price">550 LEI</div>
             </div>
