change order of sections (about is now in front of products)

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
         <button class="lightbox-nav lightbox-next" id="lightbox-next">&#8250;</button>
         <img class="lightbox-image" id="lightbox-image" src="" alt="">
         <div class="lightbox-caption" id="lightbox-caption"></div>
-        <div class="lightbox-counter" id="lightbox-counter"></div>
+        <div class="lightbox-counter hide" id="lightbox-counter"></div>
     </div>
 </div>
 <!-- Header -->
@@ -848,8 +848,8 @@
         </a>
         <ul class="nav-menu" id="nav-menu">
             <li><a href="#home">Acasa</a></li>
-            <li><a href="#products">Produse</a></li>
             <li><a href="#about">Despre</a></li>
+            <li><a href="#products">Produse</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
@@ -875,6 +875,44 @@
             <p>✓ <strong>Protectie anti-insecte</strong></p>
         </div>
         <a href="#contact" class="cta-button">Solicita Oferta</a>
+    </div>
+</section>
+
+<!-- About Section -->
+<section class="about" id="about">
+    <div class="container">
+        <h2>Despre</h2>
+        <div class="about-content">
+            <div class="about-text">
+                <h3>Pasiunea noastra pentru siguranta pisicii</h3>
+                <p>La Siguranta Pisicii, intelegem ca pisicile tale sunt familia ta. De aceea oferim cele mai sigure si durabile plase de protectie pentru ferestre, special proiectate pentru a preveni accidentele si a-ti mentine pisicile in siguranta.</p>
+                <p>In acest scop am dezvoltat solutii inovatoare care combina siguranta maxima cu estetica placuta, astfel incat sa nu compromitem designul apartamentului sau casei tale. Astfel ca, rama si balamalele pot fi de culoare alba sau maro, in functie de culoarea ferestrelor.</p>
+                <p>Intregul ansamblu: rama + plasa otel + plasa insecte poate fi mobil (cu deschidere spre exterior) sau fix, dupa cum preferati. Pretul este acelasi pentru ambele variante. Putem securiza eficient atat ferestrele termopan cat si usile de balcon din PVC, singura conditie fiind sa nu fie montate rulouri (obloane sau plase insecte rulou).</p>
+                <p>Toate plasele noastre sunt testate riguros si vin cu garantie de <strong>2 ani</strong> pentru linistea ta completa.</p>
+            </div>
+            <div class="about-images">
+                <div class="about-image" data-image="photos/Pisi3.jpeg" data-caption="Plasa montata la fereastra">
+                    <img src="photos/Pisi3.jpeg" alt="Plasa montata la fereastra" loading="lazy" style="max-width: 100%; height: auto;">
+                    <div class="about-image-caption">Plasa montata la fereastra</div>
+                </div>
+                <div class="about-image" data-image="photos/Pisi4.jpeg" data-caption="Plasa rezistenta">
+                    <img src="photos/Pisi4.jpeg" alt="Plasa rezistenta" loading="lazy" style="max-width: 100%; height: auto;">
+                    <div class="about-image-caption">Plasa rezistenta</div>
+                </div>
+                <div class="about-image" data-image="photos/Murphy1.jpeg" data-caption="Pisica fericita si protejata">
+                    <img src="photos/Murphy1.jpeg" alt="Pisica fericita si protejata" loading="lazy" style="max-width: 100%; height: auto;">
+                    <div class="about-image-caption">Pisica fericita si protejata</div>
+                </div>
+                <div class="about-image" data-image="photos/P1.jpeg" data-caption="Montaj profesional">
+                    <img src="photos/P1.jpeg" alt="Montaj profesional" loading="lazy" style="max-width: 100%; height: auto;">
+                    <div class="about-image-caption">Montaj profesional</div>
+                </div>
+                <div class="about-image hide" data-image="photos/Murphy2.jpeg" data-caption="In siguranta">
+                </div>
+                <div class="about-image hide" data-image="photos/Bella1.jpeg" data-caption="Pufos si protejat">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -931,44 +969,6 @@
                 <li>Un avans de <strong>50%</strong> din suma totala (platibil prin transfer bancar)</li>
                 <li>Confirmarea ta ca esti de acord cu termenii si conditiile pe care ii gasesti pe site-ul nostru</li>
             </ul>
-        </div>
-    </div>
-</section>
-
-<!-- About Section -->
-<section class="about" id="about">
-    <div class="container">
-        <h2>Despre</h2>
-        <div class="about-content">
-            <div class="about-text">
-                <h3>Pasiunea noastra pentru siguranta pisicii</h3>
-                <p>La Siguranta Pisicii, intelegem ca pisicile tale sunt familia ta. De aceea oferim cele mai sigure si durabile plase de protectie pentru ferestre, special proiectate pentru a preveni accidentele si a-ti mentine pisicile in siguranta.</p>
-                <p>In acest scop am dezvoltat solutii inovatoare care combina siguranta maxima cu estetica placuta, astfel incat sa nu compromitem designul apartamentului sau casei tale. Astfel ca, rama si balamalele pot fi de culoare alba sau maro, in functie de culoarea ferestrelor.</p>
-                <p>Intregul ansamblu: rama + plasa otel + plasa insecte poate fi mobil (cu deschidere spre exterior) sau fix, dupa cum preferati. Pretul este acelasi pentru ambele variante. Putem securiza eficient atat ferestrele termopan cat si usile de balcon din PVC, singura conditie fiind sa nu fie montate rulouri (obloane sau plase insecte rulou).</p>
-                <p>Toate plasele noastre sunt testate riguros si vin cu garantie de <strong>2 ani</strong> pentru linistea ta completa.</p>
-            </div>
-            <div class="about-images">
-                <div class="about-image" data-image="photos/Pisi3.jpeg" data-caption="Plasa montata la fereastra">
-                    <img src="photos/Pisi3.jpeg" alt="Plasa montata la fereastra" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Plasa montata la fereastra</div>
-                </div>
-                <div class="about-image" data-image="photos/Pisi4.jpeg" data-caption="Plasa rezistenta">
-                    <img src="photos/Pisi4.jpeg" alt="Plasa rezistenta" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Plasa rezistenta</div>
-                </div>
-                <div class="about-image" data-image="photos/Murphy1.jpeg" data-caption="Pisica fericita si protejata">
-                    <img src="photos/Murphy1.jpeg" alt="Pisica fericita si protejata" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Pisica fericita si protejata</div>
-                </div>
-                <div class="about-image" data-image="photos/P1.jpeg" data-caption="Montaj profesional">
-                    <img src="photos/P1.jpeg" alt="Montaj profesional" loading="lazy" style="max-width: 100%; height: auto;">
-                    <div class="about-image-caption">Montaj profesional</div>
-                </div>
-                <div class="about-image hide" data-image="photos/Murphy2.jpeg" data-caption="In siguranta">
-                </div>
-                <div class="about-image hide" data-image="photos/Bella1.jpeg" data-caption="Pufos si protejat">
-                </div>
-            </div>
         </div>
     </div>
 </section>
@@ -1173,7 +1173,7 @@
             }
         }
 
-document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('DOMContentLoaded', () => {
             new LightboxGallery();
         });
 
