--- a/index.html
+++ b/index.html
@@ -925,12 +925,12 @@
                 <div class="product-icon">
                     <i class="fas fa-window-maximize"></i>
                 </div>
-                <h3>Plasa Fereastra Standard (fixa/mobila)</h3>
+                <h3>Plasa Fereastra Uzuala (fixa/mobila)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
                     <li>Montaj profesional la domiciliu</li>
-                    <li>Masuri standard: 55cm-65cm / 100cm-110cm </li>
+                    <li>Dimensiuni de interior comune (fara rame): 55cm-65cm / 100cm-110cm </li>
                 </ul>
                 <div class="price">550 LEI</div>
             </div>
@@ -938,12 +938,12 @@
                 <div class="product-icon">
                     <i class="fas fa-door-open"></i>
                 </div>
-                <h3>Plasa Usa Balcon Standard (fixa/mobila)</h3>
+                <h3>Plasa Usa Balcon Uzuala (fixa/mobila)</h3>
                 <ul>
                     <li>Luare masuri la fata locului</li>
                     <li>Realizare de rame personalizate</li>
                     <li>Montaj profesional la domiciliu</li>
-                    <li>Masuri standard: 50cm-60cm / 170cm-180cm </li>
+                    <li>Dimensiuni de interior comune (fara rame): 50cm-60cm / 170cm-180cm </li>
                 </ul>
                 <div class="price">750 LEI</div>
             </div>
