--- a/index.html
+++ b/index.html
@@ -960,6 +960,22 @@
                 <div class="price-note">Pret diferit in functie de marimi</div>
                 <div class="price">La cerere</div>
             </div>
+
+ <div class="product-card">
+                <div class="product-icon">
+                    <i class="fas fa-window-maximize"></i>
+                </div>
+                <h3>Plasa Anti-insecte Simpla (fixa/mobila)</h3>
+                <ul>
+                    <li>Luare masuri la fata locului</li>
+                    <li>Realizare de rame personalizate</li>
+                    <li>Montaj profesional la domiciliu</li>
+                </ul>
+                <div class="price">300 LEI</div>
+            </div>
+
+            
+            
         </div>
         <div style="margin-top: 3rem; padding: 2rem; background: rgba(255, 193, 7, 0.1); border-radius: 15px; border-left: 5px solid #ffc107;">
             <h3 style="color: #2c3e50; margin-bottom: 1rem;">Conditii de colaborare:</h3>
