--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
     <meta property="og:image" content="og-image.jpg">
     <meta property="og:url" content="https://www.sigurantapisicii.ro">
     <meta property="og:type" content="website">
+    <meta name="robots" content="index, follow">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Siguranta Pisicii",
+            "image": "https://www.sigurantapisicii.ro/photos/Pisi3.jpeg",
+            "@id": "https://www.sigurantapisicii.ro/",
+            "url": "https://www.sigurantapisicii.ro/",
+            "telephone": "+40723897867",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Calea Vacaresti 234, bl 83, ap 35",
+                "addressLocality": "Bucuresti",
+                "addressCountry": "RO"
+            },
+            "priceRange": "300-750 RON",
+            "description": "Plase de protectie pentru pisici si anti-insecte in Bucuresti si Ilfov"
+        }
+    </script>
+    <link rel="canonical" href="https://www.sigurantapisicii.ro/" />
     <title>Siguranta Pisicii - Plase de Protectie pentru Ferestre</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
